ci: update gh pages deploy action
Signed-off-by: Thomas Hesse <mail@thomas-hesse.eu>

--- a/.github/workflows/deploy-to-gh-page.yml
+++ b/.github/workflows/deploy-to-gh-page.yml
@@ -1,32 +1,30 @@
-name: Deploy to Github Pages
+name: GitHub Pages deploy
 
 on:
   push:
-    branches:
-      - main
-
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
-  deployment:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
         with:
-          node-version: "lts/*"
-          cache: "yarn"
+          node-version: '14.x'
 
-      - name: Build
-        run: |
-          yarn install
-          yarn run build
-          yarn run export
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Installing my packages
+        run: yarn install
+
+      - name: Build my App
+        run: yarn build && yarn export && touch ./out/.nojekyll
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./out
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: out # The folder the action should deploy.
